--- a/blocks/footer.html
+++ b/blocks/footer.html
@@ -1,1 +1,22 @@
-<h1>Footer</h1>
+<div class="py-3 bg-light">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col">
+        &copy; 2020 Lifeboat. All rights reserved.
+      </div>
+      <div class="col text-right">
+        <div class="social-links">
+          <a href="#" target="_blank">
+            <img src="../img/instagram.svg">
+          </a>
+          <a href="#" target="_blank">
+            <img src="../img/linkedin.svg">
+          </a>
+          <a href="#" target="_blank">
+            <img src="../img/email.svg">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
