--- a/blocks/navbar.html
+++ b/blocks/navbar.html
@@ -1,1 +1,21 @@
-<h1>Navbar</h1>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="/">Lifeboat</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-target">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar-target">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mr-2" href="/about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-secondary" href="/sign-up.html">Sign up!</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
