--- a/sign-up.html
+++ b/sign-up.html
@@ -8,7 +8,7 @@
   <body>
     <div id="navbar"></div>
     <div class="container">
-      <h1>Home</h1>
+      <h1>Sign up!</h1>
     </div>
     <div id="footer"></div>
   </body>
