--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
   </head>
   <body>
     <div id="navbar"></div>
-    <section class="header">
-      <div class="container">
-        <div class="center-container">
-          <h1>Lifeboat</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="cta-buttons">
-            <a class="btn btn-outline-light" href="/about.html">Learn more</a>
-            <a class="btn btn-secondary" href="/sign-up.html">Sign up!</a>
+
+    <div class="page-container">
+      <section class="header">
+        <div class="container">
+          <div class="center-container">
+            <h1>Lifeboat</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="cta-buttons">
+              <a class="btn btn-outline-light" href="/about.html">Learn more</a>
+              <a class="btn btn-secondary" href="/sign-up.html">Sign up!</a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
+    
     <div id="footer"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
