--- a/sign-up.html
+++ b/sign-up.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="navbar"></div>
-    <div class="container">
+    <div class="page-container container">
       <h1>Sign up!</h1>
       <div class="split-grid">
         <div class="text-center">
