--- a/blocks/footer.html
+++ b/blocks/footer.html
@@ -7,13 +7,13 @@
       <div class="col text-right">
         <div class="social-links">
           <a href="#" target="_blank">
-            <img src="../img/instagram.svg">
+            <img src="../img/icons/instagram.svg">
           </a>
           <a href="#" target="_blank">
-            <img src="../img/linkedin.svg">
+            <img src="../img/icons/linkedin.svg">
           </a>
           <a href="#" target="_blank">
-            <img src="../img/email.svg">
+            <img src="../img/icons/email.svg">
           </a>
         </div>
       </div>
