--- a/blocks/navbar.html
+++ b/blocks/navbar.html
@@ -1,11 +1,13 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="/">Lifeboat</a>
+    <a class="navbar-brand" href="/">
+      <img style="width: 200px" src="../img/logos/lifeboat.png" alt="Lifeboat Logo">
+    </a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-target">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbar-target">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ml-auto" style="align-items: center">
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
@@ -13,7 +15,7 @@
           <a class="nav-link mr-2" href="/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-secondary" href="/sign-up.html">Sign up!</a>
+          <a class="button button-dark" href="/sign-up.html">Sign up!</a>
         </li>
       </ul>
     </div>
