--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
   <body>
     <div id="navbar"></div>
 
-    <div class="page-container">
-      <section class="header">
-        <div class="container">
-          <div class="center-container">
-            <h1>Lifeboat</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="cta-buttons">
-              <a class="btn btn-outline-light" href="/about.html">Learn more</a>
-              <a class="btn btn-secondary" href="/sign-up.html">Sign up!</a>
-            </div>
+    <section class="header">
+      <div class="container">
+        <div class="center-container">
+          <h1 class="header-primary">Lifeboat</h1>
+          <p style="font-size: 22.5px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="cta-buttons">
+            <a class="button ghost-button-light" href="/about.html">Learn more</a>
+            <a class="button button-dark" href="/sign-up.html">Sign up!</a>
           </div>
         </div>
-      </section>
-    </div>
-    
+      </div>
+    </section>
+
     <div id="footer"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
