--- a/sign-up.html
+++ b/sign-up.html
@@ -9,14 +9,13 @@
     <div id="navbar"></div>
     <div class="page-container container">
       <h1>Sign up!</h1>
+      <p>Whether you want to help others or need help yourself, we're here for you!</p>
       <div class="split-grid">
         <div class="text-center">
-          <h3>For Volunteers</h3>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetE5PXfR_4nJLav4m1dP-G-65EZUPm1jD8exa_rk4ko0dZLw/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdT_Z8jUDSndYQeArriG0rmwFQAz9V_NnqUN3Y8EiJh1ItpTQ/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
         <div class="text-center">
-          <h3>For those who need volunteers</h3>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetE5PXfR_4nJLav4m1dP-G-65EZUPm1jD8exa_rk4ko0dZLw/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfFD-AYOLE7nMlP8FUbxvDdzSeIIcpIeqrF4_es6czZWc_Tg/viewform?embedded=true" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
       </div>
     </div>
