--- a/blocks/navbar.html
+++ b/blocks/navbar.html
@@ -11,11 +11,11 @@
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link mr-2" href="/about.html">About</a>
+        <li class="nav-item mr-2">
+          <a class="nav-link" href="/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="button button-dark" href="/sign-up.html">Sign up!</a>
+          <a style="font-size: 17.5px" class="button button-dark" href="/sign-up.html">Sign up!</a>
         </li>
       </ul>
     </div>
