--- a/sign-up.html
+++ b/sign-up.html
@@ -8,7 +8,7 @@
   <body>
     <div id="navbar"></div>
     <div class="page-container container">
-      <h1>Sign up!</h1>
+      <h1 class="header-secondary">Sign up!</h1>
       <p>Whether you want to help others or need help yourself, we're here for you!</p>
       <div class="split-grid">
         <div class="text-center">
