--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <div id="imports"></div>
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="./css/about.css">
     <title>Lifeboat - About</title>
   </head>
   <body>
@@ -14,24 +14,24 @@
           <h1 class="header-secondary">About Lifeboat</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <img src="/img/home-image.jpg">
+        <img src="./img/home-image.jpg">
       </div>
 
       <h1 class="header-secondary mt-5">Meet the Team!</h1>
       <p>Here's the amazing team behind Lifeboat!</p>
       <div class="team-grid mt-3">
         <div class="member">
-          <img src="/img/people/test.jpg">
+          <img src="./img/people/test.jpg">
           <h3>Name</h3>
           <p>Title</p>
         </div>
         <div class="member">
-          <img src="/img/people/test.jpg">
+          <img src="./img/people/test.jpg">
           <h3>Name</h3>
           <p>Title</p>
         </div>
         <div class="member">
-          <img src="/img/people/test.jpg">
+          <img src="./img/people/test.jpg">
           <h3>Name</h3>
           <p>Title</p>
         </div>
@@ -41,8 +41,8 @@
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <script>
-    $(function() {$("#imports").load("/blocks/imports.html")});
-    $(function(){$("#navbar").load("/blocks/navbar.html")});
-    $(function(){$("#footer").load("/blocks/footer.html")});
+    $(function() {$("#imports").load("./blocks/imports.html")});
+    $(function(){$("#navbar").load("./blocks/navbar.html")});
+    $(function(){$("#footer").load("./blocks/footer.html")});
   </script>
 </html>
