--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <div id="imports"></div>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Lifeboat - Home</title>
   </head>
   <body>
@@ -26,8 +26,8 @@
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <script>
-    $(function() {$("#imports").load("/blocks/imports.html")});
-    $(function(){$("#navbar").load("/blocks/navbar.html")});
-    $(function(){$("#footer").load("/blocks/footer.html")});
+    $(function() {$("#imports").load("./blocks/imports.html")});
+    $(function(){$("#navbar").load("./blocks/navbar.html")});
+    $(function(){$("#footer").load("./blocks/footer.html")});
   </script>
 </html>
