--- a/sign-up.html
+++ b/sign-up.html
@@ -23,8 +23,8 @@
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <script>
-    $(function() {$("#imports").load("/blocks/imports.html")});
-    $(function(){$("#navbar").load("/blocks/navbar.html")});
-    $(function(){$("#footer").load("/blocks/footer.html")});
+    $(function() {$("#imports").load("./blocks/imports.html")});
+    $(function(){$("#navbar").load("./blocks/navbar.html")});
+    $(function(){$("#footer").load("./blocks/footer.html")});
   </script>
 </html>
