--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <h1 class="header-primary">Lifeboat</h1>
           <p style="font-size: 22.5px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <div class="cta-buttons">
-            <a class="button ghost-button-light" href="/about.html">Learn more</a>
-            <a class="button button-dark" href="/sign-up.html">Sign up!</a>
+            <a class="button ghost-button-light" href="./about.html">Learn more</a>
+            <a class="button button-dark" href="./sign-up.html">Sign up!</a>
           </div>
         </div>
       </div>
