--- a/about.html
+++ b/about.html
@@ -22,17 +22,17 @@
       <div class="team-grid mt-3">
         <div class="member">
           <img src="https://cdn.webxconsulting.com/cms/images/?projectAlias=lifeboat&alias=regina">
-          <h3>Name</h3>
+          <h3>Regina Liu</h3>
           <p data-spark="regina-title">Title</p>
         </div>
         <div class="member">
           <img src="https://cdn.webxconsulting.com/cms/images/?projectAlias=lifeboat&alias=sara">
-          <h3>Name</h3>
+          <h3>Sara Kohler</h3>
           <p data-spark="sara-title">Title</p>
         </div>
         <div class="member">
           <img src="https://cdn.webxconsulting.com/cms/images/?projectAlias=lifeboat&alias=rena">
-          <h3>Name</h3>
+          <h3>Rena Liu</h3>
           <p data-spark="rena-title">Title</p>
         </div>
       </div>
