removed .html from links

--- a/blocks/navbar.html
+++ b/blocks/navbar.html
@@ -12,10 +12,10 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="/about.html">About</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a style="font-size: 17.5px" class="button button-dark" href="/sign-up.html">Sign up!</a>
+          <a style="font-size: 17.5px" class="button button-dark" href="/sign-up">Sign up!</a>
         </li>
       </ul>
     </div>
